--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -14,6 +14,9 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+        <NavLink href="/agregar" Match="NavLinkMatch.All">Agregar Animal</NavLink>
+        <NavLink href="/listado">Listado de Animales</NavLink>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
